# apertium-ita

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  AUTHORS  Makefile  Makefile.am  apertium-ita.ita.acx  apertium-ita.ita.dix  apertium-ita.ita.rlx  apertium-ita.ita.tsx  apertium-ita.pc.in  apertium-ita.post-ita.dix  carregar_lexic_srd_ita.pl  configure.ac  ita-supervised.make  ita-unsupervised.make  ita.prob  modes.xml  sustituye_caracteres.awk.in
corpus/: corpus_it_wp10000.txt
ita-tagger-data/: ita-supervised.prob  ita.crp  ita.dic  ita.tagged  ita.tagged.txt  ita.untagged
jaumeortola/: ita-adj.txt  ita-adv.txt  ita-noun.txt
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/puupankki/: puupankki.ita.vislcg
